# cross_modal_full_transfer

./: .gitignore  README.md  pyproject.toml
src/: finetune_flickr.py  inference_flickr.py  models.py  pretrain_flickr.py  train_flickr.py
src/utils/: data_loading_utils.py  datasets.py  evaluator.py  test_datasets.py
