[tool.poetry]
name = "cross_modal_full_transfer"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.2"
torchvision = "^0.4.0"
jupyter = "^1.0"
tqdm = "^4.36"
transformers = "^2.1"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
